# fcsc

./: README.md  fcsc-chmod.sh  ros-install-fcsc-packages.sh
EZGripper/: MANUAL.md
analysis_workspace/: CMakeLists.txt  README.md  package.xml
analysis_workspace/include/analysis_workspace/: analyse_workspace.h
analysis_workspace/launch/: analysis_workspace.launch
analysis_workspace/src/: analyse_workspace.cpp  test_analyse_workspace.cpp
daihen_mobile_robot/: README.md  manual.md
daihen_mobile_robot/comm_client/: CMakeLists.txt  package.xml
daihen_mobile_robot/comm_client/include/: CommToTransRobot.h  Console.h  EscapeSequence.h  File.h  IniFile.h  M2W.H  Mutex.h  NetIf.h  Parameters.h  Quat.h  ScopeLock.h  SharedMemory.h  Socket.h  String2Holder.h  libcpp.h
daihen_mobile_robot/comm_client/include/DBasicObject/: DBasicTypes.h
daihen_mobile_robot/comm_client/include/DCommunication/: DCommunicationUtil.h
daihen_mobile_robot/comm_client/launch/: Comm_Client.launch  Comm_Simulation.launch
daihen_mobile_robot/comm_client/src/: CommToArm.cpp  CommToSimulation.cpp  CommToTransRobot.cpp  DBasicTypes.cpp  MyString.cpp  Netif.cpp  Socket.cpp
daihen_mobile_robot/comm_client/srv/: GoalPose.srv  MoveLift.srv  RobotPose.srv
daihen_mobile_robot/comm_server/: CMakeLists.txt  package.xml
daihen_mobile_robot/robot_description/: package.xml
daihen_ur5_moveit_config/: CMakeLists.txt  MANUAL.md  package.xml
daihen_ur5_moveit_config/config/: chomp_planning.yaml  controllers.yaml  daihen_ur5.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
daihen_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  daihen_ur5_moveit_controller_manager.launch.xml  daihen_ur5_moveit_planning_execution.launch  default_warehouse_db.launch  demo.launch  demo_chomp.launch  (+19 more)
dmp/: CMakeLists.txt  README.md  package.xml
ezgripper_cpp_driver/: CMakeLists.txt  MANUAL.md  README.md  package.xml
ezgripper_cpp_driver/include/ezgripper_cpp_driver/: ezgripper_interface.h
ezgripper_cpp_driver/launch/: bringup.launch  joy.launch  joy2sync.launch
ezgripper_cpp_driver/node/: ezgripper_joint_state_publisher.py
ezgripper_cpp_driver/src/: ezgripper_interface.cpp  ezgripper_test.cpp
fcsc_description/: CMakeLists.txt  MANUAL.md  README.md  package.xml
fcsc_gazebo/: CMakeLists.txt  MANIAL.md  package.xml
fcsc_launch/: CMakeLists.txt  MANUAL.md  package.xml
fcsc_moveit/: CMakeLists.txt  README.md  package.xml
fcsc_moveit/bag/: rosbag_ur5.sh
fcsc_moveit/config/ezgripper_dual/: touch_links.yaml
fcsc_moveit/config/ezgripper_quad/: ez_gripper_touch_links.yaml
fcsc_moveit/config/no_hand/: touch_links.yaml
fcsc_moveit/include/fcsc_moveit/: eiquadprog.hpp  grasp_planning.h  mobile_robot.h  robot_hand.h  smach_daihen_ur5_moveit_core.h  utility.h
fcsc_moveit/script/: fcsc_smach.py
fcsc_moveit/src/: get_base_position_server.cpp  grasp_planning.cpp  mobile_robot.cpp  robot_hand.cpp  smach_daihen_ur5_moveit_core.cpp  smach_daihen_ur5_moveit_core.cpp.backup  test_faceup_product.cpp  test_get_base_position_server.cpp  test_recover_product.cpp  test_stocking_product.cpp  time_pub.cpp
fcsc_moveit/src/action/: change_sandwich_pose.cpp  detect_action.cpp  detect_and_recover_sandwich.cpp  faceup_sandwich.cpp  mobile_robot_action.cpp  pickup_product.cpp  pickup_sandwich.cpp  place_product.cpp  recover_product.cpp  recover_sandwich.cpp
fcsc_msgs/: CMakeLists.txt  package.xml
fcsc_msgs/msg/: Grasp.msg  PoseStampedWithCost.msg  RecognizedObject.msg  RecognizedObjectArray.msg
fcsc_msgs/srv/: DetectAndRecoverSandwich.srv  DetectObject.srv  DetectProduct.srv  DetectSandwich.srv  DetectShelf.srv  EstimateObjectPosition.srv  EstimateSandwichPosition.srv  FaceupSandwich.srv  GetBasePosition.srv  GetBasePosition.srv.backup  Manipulate.srv  PickupSandwich.srv  RecoverSandwich.srv  ReturnProduct.srv  SortOrderManipulation.srv  finish_navigation.srv
fcsc_perception/: CMakeLists.txt  README.md  package.xml
fcsc_perception/config/: scrap_sandwich_id.yaml  shelf_marker_id.yaml  stocking_products.yaml  tf_from_ar_marker_to_sandwich.yaml
fcsc_perception/launch/: ar_marker.launch  depth.launch  no_depth.launch  no_depth_bundle.launch  object_detection.launch
fcsc_perception/script/: create_fcsc_shelf_markers_xml.py  create_sandwich_marker_tf_config.py  create_sandwich_markers.py  create_shelf_markers_xml.py  create_wrs_shelf_markers_xml.py
fcsc_perception/src/: ar_pose_to_object_pose_server.cpp  clustering_ros_srv.cpp  estimate_sandwich_position.cpp  object_detection_server.cpp  shelf_detector.cpp
fcsc_tf/: CMakeLists.txt  README.md  package.xml
fcsc_tf/launch/: realsense_frames.launch
fcsc_tf/src/: detected_object_tf_broadcaster.cpp  grasped_object_tf_broadcaster.cpp  sandwich_tf_broadcaster.cpp  shelf_tf_broadcaster.cpp  virtual_joint_broadcaster.cpp
fcsc_visual_tools/: CMakeLists.txt  package.xml
fcsc_visual_tools/include/fcsc_visual_tools/: fcsc_visual_tools.h  random_sandwich_generator.h
fcsc_visual_tools/node/: spawn_randomly_sandwich.cpp  spawn_sandwich.cpp  spawn_shelf.cpp
fcsc_visual_tools/src/: fcsc_visual_tools.cpp  random_sandwich_generator.cpp
hierarchical_trajectory_database/: CMakeLists.txt  README.md  package.xml
hierarchical_trajectory_database/include/hierarchical_trajectory_database/: astar_search.h  graph.h  hierarchical_trajectory_database.h  kmeans.h  my_astar_search.h
hierarchical_trajectory_database/launch/: generate_trajectory_server.launch
hierarchical_trajectory_database/src/: generate_trajectory_server.cpp  hierarchical_trajectory_database.cpp  test_astar.cpp
hierarchical_trajectory_database/srv/: GenerateTrajectory.srv
orbit_generation/: CMakeLists.txt  package.xml
trajectory_data_handler/: CMakeLists.txt  README.md  package.xml
trajectory_data_handler/include/trajectory_data_handler/: trajectory_data_handler.h
trajectory_data_handler/launch/: load_trajectory_node.launch
trajectory_data_handler/src/: load_trajectory_node.cpp  trajectory_data_handler.cpp
(+313 files in other folders)
